--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
+/* 
+It would be probably better to use less, sass etc. 
+to get some props like $primary-color $font-color etc.
+*/
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 40px 10px;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background: #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.content{
+  width: 90%;
+  background: #fff;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-data{
+  text-align: center;
+  font-size: 12px;
+  color: #ccc;
 }
