--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,12 @@ to get some props like $primary-color $font-color etc.
 
 .content{
   width: 90%;
+  min-height: 400px;
   background: #fff;
   padding: 20px;
 }
 
-.no-data{
+.no-data, .loading{
   text-align: center;
   font-size: 12px;
   color: #ccc;
